[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-cerebrus-pulse"
version = "0.1.0"
description = "LangChain tools for Cerebrus Pulse crypto intelligence API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OpenClaw", email = "contact@openclaw.ai" },
]
keywords = [
    "langchain", "crypto", "technical-analysis", "hyperliquid",
    "ai-agent", "cerebrus-pulse", "trading", "tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cerebrus-pulse>=0.1.0",
    "langchain-core>=0.2.0",
]

[project.urls]
Homepage = "https://pulse.openclaw.ai"
Documentation = "https://pulse.openclaw.ai/overview"
Repository = "https://github.com/0xsl1m/langchain-cerebrus-pulse"
